syntax = "proto3";

package user;

option java_multiple_files = true;
option java_package = "cn.chinajnc.grpc.hello";
option java_outer_classname = "UserProto";

// The greeting service definition.
service Auth {
  // Sends a greeting
  rpc ConfigAuth (AuthRequest) returns (AuthResponse) {}
  rpc GetBashInfo (AuthRequest) returns (AuthResponse) {}
}

// The request message containing the user's name.
message AuthRequest {
  string username = 1;
  string userpasd = 2;
}

// The response message containing the greetings
message AuthResponse {
  int32 errorcode = 1;
  string messages = 2;
}

// The request message containing the user's name.
message BaseInfoRequest {
}

// The response message containing the greetings
message BaseInfoResponse {
  string username = 1;
  int32 usergrender = 2;
}